[gd_scene load_steps=2 format=3 uid="uid://bm164l4u2d8gu"]

[ext_resource type="Script" uid="uid://bcowldx386cti" path="res://script/Scene/ScheduleUI.gd" id="1_schedule"]

[node name="ScheduleUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_schedule")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.490196)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(300, 250)

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 15.0
offset_bottom = 45.0
grow_horizontal = 2
text = "日程安排"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeSlotContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 60.0
offset_right = -30.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="InfoPanel" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -70.0
offset_right = -160.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="EnergyLabel" type="Label" parent="Panel/InfoPanel"]
layout_mode = 2
text = "精力: 100/100"

[node name="DateLabel" type="Label" parent="Panel/InfoPanel"]
layout_mode = 2
size_flags_horizontal = 10
text = "9月1日"

[node name="ConfirmButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -70.0
offset_right = -30.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
text = "开始日程"

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 40.0
grow_horizontal = 0
text = "X"
